package cars.correction.exercice2.src.trafficlight;

interface SwitchColorStrategy {
	public LightColor switchColor( LightColor currentColor );
}